--- a/.github/workflows/e2e_tests.yml
+++ b/.github/workflows/e2e_tests.yml
@@ -66,7 +66,7 @@ jobs:
         shell: sh
         run: |
           set -eu
-          npm ci
+          npm install
           npm run build
 
       - name: Deploy
