--- a/.github/workflows/e2e_tests.yml
+++ b/.github/workflows/e2e_tests.yml
@@ -1,4 +1,4 @@
-name: E2E tests
+name: Playwright E2E tests
 on:
   push:
     branches: [ master ] 
@@ -38,9 +38,9 @@ jobs:
         id: reserve
         uses: Platform-OS/ci-repository-reserve-instance-url@0.0.9
         with:
-          repository-url: ${{ vars.CI_REPOSITORY_URL }}
+          repository-url: ${{ vars.CI_PS_REPOSITORY_URL }}
           method: reserve
-          pos-ci-repo-token: ${{ secrets.POS_CI_REPO_ACCESS_TOKEN }}
+          pos-ci-repo-token: ${{ secrets.POS_CI_PS_REPO_ACCESS_TOKEN }}
 
   deploy:
     needs: ["reserve-ci-instance"]
@@ -53,9 +53,16 @@ jobs:
     env:
       CI: true
       MPKIT_EMAIL: ${{ secrets.MPKIT_EMAIL }}
-      MPKIT_TOKEN: ${{ secrets.MPKIT_TOKEN }}
       MPKIT_URL: ${{ needs.reserve-ci-instance.outputs.mpkit-url }}
     steps:
+      - name: Get MPKIT token
+        id: get-token
+        uses: Platform-OS/ci-repository-reserve-instance-url@mask-token
+        with:
+          method: get-token
+          repository-url: ${{ vars.CI_PS_REPOSITORY_URL }}
+          pos-ci-repo-token: ${{ secrets.POS_CI_PS_REPO_ACCESS_TOKEN }}
+
       - uses: actions/checkout@v4
 
       - uses: actions/setup-node@v4
@@ -65,6 +72,8 @@ jobs:
       - name: Deploy
         timeout-minutes: 6
         shell: sh
+        env:
+          MPKIT_TOKEN: ${{ steps.get-token.outputs.mpkit-token }}
         run: |
           set -eu
           chmod +x ./tests/data/seed/seed.sh
@@ -79,7 +88,6 @@ jobs:
       CI: true
       E2E_TEST_PASSWORD: ${{ secrets.E2E_TEST_PASSWORD }}
       MPKIT_EMAIL: ${{ secrets.MPKIT_EMAIL }}
-      MPKIT_TOKEN: ${{ secrets.MPKIT_TOKEN }}
       MPKIT_URL: ${{ needs.reserve-ci-instance.outputs.mpkit-url }}
       HTML_ATTACHMENTS_BASE_URL: ${{ vars.HTML_ATTACHMENTS_BASE_URL }}
       TEST_REPORT_MPKIT_URL: ${{ vars.TEST_REPORT_MPKIT_URL }}
@@ -128,5 +136,5 @@ jobs:
         uses: Platform-OS/ci-repository-reserve-instance-url@0.0.9
         with:
           method: release
-          repository-url: ${{ vars.CI_REPOSITORY_URL }}
-          pos-ci-repo-token: ${{ secrets.POS_CI_REPO_ACCESS_TOKEN }}
+          repository-url: ${{ vars.CI_PS_REPOSITORY_URL }}
+          pos-ci-repo-token: ${{ secrets.POS_CI_PS_REPO_ACCESS_TOKEN }}
